# Godot-SpacetimeDB-SDK

./: .env.json  LICENSE  README.md  codegen.py  codegen_schema.py
godot client/: client.gd  client.gd.uid  export_presets.cfg  icon.svg.import  main.gd  main.gd.uid  main.tscn  main.tscn4643967440.tmp  main.tscn474225440.tmp  project.godot  spacetime_packet.gd  spacetime_packet.gd.uid
godot client/SpacetimeDB/: BSATNParser.gd  DataDecompressor.gd  IdentityTokenData.gd  ReducerCallInfoData.gd  SpacetimeDBClient.gd  SpacetimeDBConnection.gd  SpacetimeDBRestAPI.gd
godot client/addons/SpacetimeDB/: plugin.cfg  spacetime.gd
godot client/codegen_debug/: readme.txt  schema_main.json
godot client/example_code/: LobbyHolder.gd  LobbyHolder.gd.uid  lobby_holder.gd  lobby_holder.gd.uid  mouse.gd  mouse.gd.uid  player.gd  player.gd.uid  players.gd.uid  spawner.gd  spawner.gd.uid
godot client/icons/: mouse.png.import
godot client/scenes/: lobby_holder.gd  mouse.gd  mouse.gd.uid  mouse.tscn  player.tscn  players.gd  players.gd.uid  puzzle_demo.tscn  stats.gd  stats.gd.uid  stats.tscn
godot client/schema/: Damage.gd  Damage.gd.uid  Lobby.gd  Lobby.gd.uid  Message.gd  Message.gd.uid  User.gd  User.gd.uid  UserData.gd  UserData.gd.uid  module_main.gd  module_main.gd.uid  module_main_reducers.gd  module_main_reducers.gd.uid  spacetime_modules.gd  spacetime_modules.gd.uid
godot client/spacetime_data/: codegen_config.json
python-codegen/: codegen.py  codegen_schema.py
second-module/: Cargo.toml
second-module/src/: lib.rs
server/src/: lib.rs  message.gd  user.gd
(+81 files in other folders)
