[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.0.1"
log = "0.4"

[build-dependencies]
syn = { version = "2.0", features = [
    "full",
    "parsing",
] } # Нужен для парсинга Rust кода
quote = "1.0" # Помогает генерировать Rust код (может быть полезен при работе с syn)
# serde = { version = "1.0", features = ["derive"] } # Если будете генерировать JSON
# serde_json = "1.0" # Если будете генерировать JSON
